<resources>
    <string name="app_name">Phocus</string>
    <string name="success">Success!</string>
    <string name="streak">Streak</string>
    <string name="start_button">START</string>
    <string name="hours">Hours: </string>
    <string name="minutes">Minutes: </string>
    <string name="zero">0</string>
    <string name="emergencystop">EMERGENCY STOP</string>
    <string name="alert_message">Are you sure you want to quit? You will lose half of your streak!</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="facebook_app_id">122844268430659</string>
</resources>
