<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/popupbackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/alert_message"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/dialogButtonNo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text"
        android:layout_alignRight="@+id/text"
        android:layout_below="@+id/text"
        android:paddingRight="5dp"
        android:text="@string/no_button"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/dialogButtonYes"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text"
        android:layout_alignStart="@+id/text"
        android:layout_below="@+id/text"
        android:paddingRight="5dp"
        android:text="@string/yes_button"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

</RelativeLayout>